fix horizontal scroll in mobile menu

--- a/src/components/mainRightSide/RightSide.module.css
+++ b/src/components/mainRightSide/RightSide.module.css
@@ -180,7 +180,7 @@ span {
 		top: 0;
 		bottom: 0;
 		right: 0;
-		width: 303px;
+		width: 310px;
 		height: 100vh; /* fallback */
 		height: -webkit-fill-available;
 		min-height: 100vh;
